[gd_scene load_steps=8 format=2]

[ext_resource path="res://hero/hero.tscn" type="PackedScene" id=1]
[ext_resource path="res://level/level.gd" type="Script" id=2]
[ext_resource path="res://level/images/space.jpg" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Begok v15_2015___free.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://enemy/images/stone.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D" groups=[
"enemys",
]]
script = ExtResource( 2 )

[node name="ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 138, 479 )

[node name="TimerRespEnemy" type="Timer" parent="."]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Label" type="Label" parent="Camera2D"]
margin_left = 16.0
margin_top = 16.0
margin_right = 61.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenHitOnHero" type="Tween" parent="Camera2D"]

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 220.0
margin_top = 16.0
margin_right = 254.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asteroids" type="Label" parent="Camera2D/HBoxContainer"]
margin_right = 34.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stone" type="Sprite" parent="Camera2D/HBoxContainer"]
position = Vector2( -12.4708, 9.03587 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="TweenAsteroids" type="Tween" parent="Camera2D/HBoxContainer"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]
rotation = -3.14159
transform = Transform2D( -1, -1.50996e-07, 1.50996e-07, -1, 0, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_mirroring = Vector2( 0, 1000 )

[node name="space" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
show_behind_parent = true
rotation = 1.5708
texture = ExtResource( 4 )

[connection signal="timeout" from="TimerRespEnemy" to="." method="_on_TimerRespEnemy_timeout"]
[connection signal="tween_completed" from="Camera2D/TweenHitOnHero" to="." method="_on_TweenHitOnHero_tween_completed"]
[connection signal="tween_completed" from="Camera2D/HBoxContainer/TweenAsteroids" to="." method="_on_TweenAsteroids_tween_completed"]
